Fixed cpu-step behaviour the first time it's executed
Fixed cursor keys up/down on Jupiter Ace
Fixed --help and --experthelp settings: do not parse configuration file when showing help
Fixed autoload on spectrum 48k+ spanish
Fixed loading ZX80/81 Snapshots/Tapes when filename has more than one extension


Some other minor bugfixes and improvements



Version 9.2 - Cliff Hanger edition. 05 April 2021

Added SamRam Gerton Lunter interface emulation
Added new ZX-Uno Prism video mode
Added Dandanator storage button icon
Added alternate Jupiter ACE rom
Added another fourth easter egg ;)
Added read only setting for esxdos handler
Added setting to redefine joystick fire key
Added midi output instrument selector
Added Debug action to set PC register to zero
Added command line setting --copy-file-to-mmc to be able to copy files to a mmc image before starting ZEsarUX
Added ZRCP command realtape-open


Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added .snx snapshot support
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Improved CPC emulation: 
-Added video scanlines rendering (A.K.A. Real Video)
-Joystick emulation
-Stereo emulation

Improved File utilities Browser:
-Added support for browsing inside FAT filesystem disk images (.img, .mmc, .ide, etc)
-Detect when source and target directories are the same when moving or copying
-Show more info in some file viewers (.sna, .p, .o, etc)
-Added .nex file viewer
-Added copy and delete entire folder
-Added SCR to TXT file converter

Improved Debug CPU Window:
-Can load a source code
-Tell when a condition is satisfied or not