@@ -97,6 +97,7 @@ Fixed cursor keys up/down on Jupiter Ace
 Fixed --help and --experthelp settings: do not parse configuration file when showing help
 Fixed autoload on spectrum 48k+ spanish
 Fixed loading ZX80/81 Snapshots/Tapes when filename has more than one extension
+Fixed wave shape type "Scroll" on View WaveForm
 
 
 Some other minor bugfixes and improvements
